Tests verbessert, Reduktion 2 Fehler behoben, generierte Beispiele